# python-slots

./: .gitignore  .pdm.toml  classes.py  dc.py  dict_access.py  main.py  pyproject.toml
